--- a/res/layout/welocome.xml
+++ b/res/layout/welocome.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
     <ImageView 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/welocome"
+        android:background="#ffffff"
         />
-
-</LinearLayout>
+	<TextView 
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:text="我的app"
+	    android:textColor="#ff0fff"
+	    android:textSize="30sp"
+	    android:gravity="center"
+	    android:lineSpacingMultiplier="3"
+	    />
+</FrameLayout>
