--- a/res/layout/http_resutl_activity.xml
+++ b/res/layout/http_resutl_activity.xml
@@ -3,10 +3,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+        <LinearLayout android:layout_width="fill_parent"  
+        android:layout_height="0dp"
+        android:layout_weight="1" 
+        android:clickable="true"  
+        android:focusable="true"  
+        android:focusableInTouchMode="true"  
+        android:orientation="vertical"
+        >  
     <TextView 
         android:id="@+id/result_activity_tv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
+        android:text="接收数据：result"
+        android:textSize="18sp"
+       android:singleLine="true"  
+        android:ellipsize="marquee"  
+        android:clickable="true"  
+        android:focusable="true"  
+        android:focusableInTouchMode="true" 
         />
-
+    </LinearLayout>
+<Button 
+    android:id="@+id/bt_click"
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+      android:background="#ff00ff"
+    android:text="点击"
+    android:textColor="@color/yellow"
+    
+    />
 </LinearLayout>
